# ConstructionCompany

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 922a4345579a_.py
api/repositories/: client_repository.py  project_repository.py
api/routers/: client_router.py  project_router.py
frontend/404_errorPage/: 404.html  style.css
frontend/check_status_order_page/: checkOrderStatus.css  checkOrderStatus.html  checkOrderStatus.js
frontend/main_page/: mainPage.css  mainPage.html  mainPage.js
models/: models.py  schemas.py
