[tool.poetry]
name = "constructioncompany"
version = "0.1.0"
description = ""
authors = ["Shell <nyancat2452@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
sqlalchemy = "^2.0.23"
cryptography = "^41.0.5"
alembic = "^1.12.1"
pydantic = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
